# 3d_llm_visualizer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
include/: AttentionHead.h  Camera.h  Common.h  LLMVisualization.h  Layer.h  Mesh.h  Model.h  Neuron.h  Renderer.h  Shader.h  SimulationController.h
resources/shaders/: connection.frag  connection.vert  neuron.frag  text.frag  text.vert
src/: AttentionHead.cpp  Camera.cpp  LLMVisualization.cpp  Layer.cpp  Mesh.cpp  Model.cpp  Neuron.cpp  Renderer.cpp  Shader.cpp  SimulationController.cpp  main.cpp
